--- a/client/src/styles/terminal/SocialFeed.module.css
+++ b/client/src/styles/terminal/SocialFeed.module.css
@@ -1,9 +1,9 @@
 /* Social Feed Styles */
 .socialFeed {
+  width: 100%;
   max-width: 920px;
-  margin: 0 auto;
-  margin-left: 4px;
   padding: 0px 20px 20px 20px;
+  box-sizing: border-box;
 }
 
 .loading {
